statsgod (0.2-1) trusty; urgency=low

  * Initial release

 -- root <engineering@acquia.com>  Mon, 02 Nov 2015 20:11:44 +0000