@@ -1,4 +1,4 @@
 #!/bin/sh
 
 # Stop the service.
-/etc/init.d/statsgod stop || true
+/usr/sbin/service statsgod stop || true
